--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //implementation 'org.parceler:parceler-api:1.1.12'
+    //annotationProcessor 'org.parceler:parceler:1.1.12'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.fragment:fragment:1.3.2"
+    //implementation "androidx.activity:activity-ktx:1.2.0-alpha04"
 }
