Nav drawer branch merge (#3)
* working on nav drawer

* add writer fragment

* adding writerfragment and fixing the toolbar bug

* Recreating Fragments from scratch

* Working on the media player layout

* minor modifications play pause icons

* dynamically change the volume seekbar and music control seekbar

* working on  Songs adapter and listview and permission request

* working on media player permissions

Co-authored-by: Amine CHICHI <aminechichi99@gmail.com>
Co-authored-by: Hamza Boucherit <hamzaboucherit19@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.leafter">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+
+
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Leafter">
+        <activity android:name=".MusicPlayer_Activity">
+
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -17,6 +25,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
