App can now import real books + Reader is functional + Catalogue is functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,24 +5,32 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Leafter">
-        <activity android:name=".Book_Info"></activity>
-        <activity android:name=".MusicPlayer_Activity"></activity>
+    android:name=".persistence.database.Instance"
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:requestLegacyExternalStorage="true"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.Leafter">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+        android:name=".activities.Book_List_Activity"
+        android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.Book_Info_Activity" />
+        <activity android:name=".activities.Music_Player_Activity" />
+        <activity
+            android:name=".activities.Reader_Activity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".activities.Book_Info_Activity" />
+        <activity
+            android:name=".activities.Fetch_Book_Activity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".activities.Book_List_Activity" />
     </application>
 
 </manifest>
