Music Player partially functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.android.leafter">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
     android:name=".persistence.database.Instance"
@@ -31,6 +33,7 @@
             android:name=".activities.Fetch_Book_Activity"
             android:screenOrientation="portrait"
             android:parentActivityName=".activities.Book_List_Activity" />
+        <service android:name="com.android.leafter.Service.MusicService" />
     </application>
 
 </manifest>
