--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
     <application
     android:name=".persistence.database.Instance"
     android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
+    android:icon="@mipmap/ic_leafter"
     android:label="@string/app_name"
     android:requestLegacyExternalStorage="true"
-    android:roundIcon="@mipmap/ic_launcher_round"
+    android:roundIcon="@mipmap/ic_leafter_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.Leafter">
         <activity
