--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
     }
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 }
+//
+//repositories {
+//    maven {
+//        url 'http://maven.openkm.com/'
+//    }
+//}
 
 dependencies {
 
@@ -48,4 +54,12 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.fragment:fragment:1.3.2"
     //implementation "androidx.activity:activity-ktx:1.2.0-alpha04"
+    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+//    // https://mvnrepository.com/artifact/nl.siegmann.epublib/epublib-core
+//    implementation('nl.siegmann.epublib:epublib-core:3.1') {
+//        exclude group: 'org.slf4j'
+//        exclude group: 'xmlpull'
+//    }
+//    implementation 'org.slf4j:slf4j-android:1.7.25'
+
 }
